Fix notifications button on mobile / Fix media queries

--- a/nexaas-app/app/assets/less/partials/_breadcrumb.less
+++ b/nexaas-app/app/assets/less/partials/_breadcrumb.less
@@ -33,7 +33,7 @@
     opacity: .5;
   }
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 768px) {
 
     &-section, .divider {
       display: none;
