--- a/nexaas-app/app/assets/less/partials/_dropdown.less
+++ b/nexaas-app/app/assets/less/partials/_dropdown.less
@@ -76,7 +76,7 @@
     }
   }
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 768px) {
     position: fixed;
     width: 100%;
     top: auto;
