--- a/nexaas-app/app/assets/less/partials/_header.less
+++ b/nexaas-app/app/assets/less/partials/_header.less
@@ -9,7 +9,7 @@
   .ch-dropdown {
     min-width: 200px;
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 769px) {
     position: fixed;
     top: 0;
     right: 0;
