--- a/nexaas-app/app/assets/less/partials/_menu.less
+++ b/nexaas-app/app/assets/less/partials/_menu.less
@@ -17,7 +17,7 @@
     list-style: none;
   }
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 768px) {
     position: fixed;
     top: auto;
     bottom: 0;
@@ -99,7 +99,7 @@
     display: none;
   }
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 768px) {
     width: 100%;
     height: 50px;
     display: flex;
@@ -180,7 +180,7 @@
     }
   }
 
-  @media screen and (min-width: 768px ) {
+  @media screen and (min-width: 769px ) {
     &-item:hover {
       > .ch-dropdown {
         display: block;
