--- a/nexaas-app/app/assets/less/partials/dashboard.less
+++ b/nexaas-app/app/assets/less/partials/dashboard.less
@@ -67,7 +67,7 @@
   right: 0 !important;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 768px) {
   .ui.unstackable.items>.item>.image,
   .ui.unstackable.items>.item>.image>img {
     width: auto !important; //Overrides Semantic UI rule
